syntax = "proto3";

package sso_contract;

option go_package = "al.contract.v1;sso_contract";

service Auth {
    rpc Signup (SignupRequest) returns (SignupResponse);
    rpc Signin (SigninRequest) returns (SigninResponse);
    rpc IsAdmin (IsAdminRequest) returns (IsAdminResponse);
}


message SignupRequest {
    string email = 1; // Email of the user to register.
    string password = 2; // Password of the user to register.
}

message SignupResponse {
    string user_id = 1; // User ID of the registered user.
}

message SigninRequest {
    string email = 1; // Email of the user to login.
    string password = 2; // Password of the user to login.
    int32  app_id = 3; // ID of the app to login to.
}

message SigninResponse {
    string token = 1; // Auth token of the logged in user.
}

message IsAdminRequest {
    string user_id = 1; // User ID to validate.
}

message IsAdminResponse {
    bool is_admin = 1;  // Indicate whether the user is admin.
}